# lexicom_task_solution

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  routers.py
tests/: conftest.py  test_routers.py
